# FabSim

./: CMakeLists.txt  build_debug.bat  generate.bat  run_debug.bat
source/: CMakeLists.txt  camera.cpp  camera.h  debug_print.h  main.cpp  mesh.cpp  mesh.h  object.cpp  object.h  shader.cpp  shader.h
source/shaders/: shader.frag  shader.vert
source/shapes/: cube.cpp  cube.h  triangle.cpp  triangle.h
